# OpenCV

./: CMakeLists.txt  PracticalSocket.cpp  openCV.cpp  opencv.cpp
